--- a/Desktop/laboratorio-1-alfonsozunigaj-master/app/src/main/res/layout/fragment_list.xml
+++ b/Desktop/laboratorio-1-alfonsozunigaj-master/app/src/main/res/layout/fragment_list.xml
@@ -1,17 +1,17 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alfonso.lab01.ListFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.alfonso.lab01.MainActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_main">
 
     <ListView
-        android:id="@+id/listView_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="495dp"
-        android:layout_marginTop="72dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        android:id="@+id/list_form"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
