--- a/Desktop/laboratorio-1-alfonsozunigaj-master/app/src/main/res/layout/fragment_list.xml
+++ b/Desktop/laboratorio-1-alfonsozunigaj-master/app/src/main/res/layout/fragment_list.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.alfonso.lab01.MainActivity"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:padding="60dp">
 
     <ListView
         android:id="@+id/list_form"
