--- a/Desktop/laboratorio-1-alfonsozunigaj-master/app/src/main/res/menu/drawer_view.xml
+++ b/Desktop/laboratorio-1-alfonsozunigaj-master/app/src/main/res/menu/drawer_view.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/log_out_button"
+        android:icon="@drawable/ic_exit_to_app"
+            android:title="@string/log_out"
+        app:showAsAction="always"
+        android:orderInCategory="0"/>
+
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_form"
@@ -17,12 +26,5 @@
             android:id="@+id/nav_credentials"
             android:icon="@drawable/ic_account_circle_black"
             android:title="@string/my_account" />
-    </group>
-
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_log_out"
-            android:icon="@drawable/ic_exit_to_app"
-            android:title="@string/log_out" />
     </group>
 </menu>
